--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,16 @@
   box-sizing: border-box;
 }
 
-@layer utilities {
-  .tooltip {
-    background-color: red;
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+@layer components {
+  .bg_image {
+    background: url("./pages/components/dashboard/assets/bg_pattern.png");
+    width: 100%;
+    height: 100%;
+    background-repeat: repeat;
   }
 }
 
