--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,39 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: #2e2e2e;
+  min-height: 100vh;
+  min-width: 320px;
+  width: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
 
 @layer components {
   .bg_image {
     background: url("./pages/components/dashboard/assets/bg_pattern.png");
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    height: 80%;
     background-repeat: repeat;
+    position: absolute;
+    overflow: hidden;
   }
 }
 
