--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
+ * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -15,9 +15,9 @@ body {
   min-height: 100vh;
   min-width: 320px;
   width: 100%;
-} */
+} 
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 8px;
 }
 
@@ -32,7 +32,7 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-} */
+}
 
 
 
