--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
- * {
+ /* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -33,10 +33,10 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+ */
 
 
-
-@layer components {
+/* @layer components {
   .bg_image {
     background: url("./pages/components/dashboard/assets/bg_pattern.png");
     width: fit-content;
@@ -98,4 +98,4 @@ body {
     --bs-body-font-weight: 400;
     --bs-body-line-height: 1.5;
     --bs-body-bg: #fafafa;
-}
+} */
