--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
- /* * {
+ * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -33,10 +33,10 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
- */
 
 
-/* @layer components {
+
+@layer components {
   .bg_image {
     background: url("./pages/components/dashboard/assets/bg_pattern.png");
     width: fit-content;
@@ -90,15 +90,5 @@ body {
     --bs-white-rgb: 255,255,255;
     --bs-black-rgb: 0,0,0;
     --bs-body-bg-rgb: 250,250,250;
-<<<<<<< HEAD
-=======
-    --bs-font-sans-serif: "Cerebri Sans,sans-serif";
-    --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-    --bs-gradient: linear-gradient(180deg,hsla(0,0%,100%,.15),hsla(0,0%,100%,0));
-    --bs-body-font-family: var(--bs-font-sans-serif);
-    --bs-body-font-size: .9375rem;
-    --bs-body-font-weight: 400;
-    --bs-body-line-height: 1.5;
->>>>>>> 66bebf5510770a8755befd7ceb05b1396d07c5f0
     --bs-body-bg: #fafafa;
-} */
+}
