--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
- * {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -15,7 +15,7 @@ body {
   min-height: 100vh;
   min-width: 320px;
   width: 100%;
-} 
+}
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -50,6 +50,14 @@ body {
     background: radial-gradient(#46B96C, rgba(42, 106, 63, 0.97), rgba(13, 13, 13, 0.94));
   }
 
+  .sign_in_bg {
+    background-image: url("./pages/login/assets/bg_frame.png");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    min-height: 100vh;
+    object-fit: contain;
+  }
+
   @keyframes slide {
     from {
       transform: translate(-50%, -60%);
@@ -69,45 +77,45 @@ body {
 
 :root {
   --bs-blue: #4eac6d;
-    --bs-red: #ef476f;
-    --bs-orange: #fc814a;
-    --bs-yellow: #ffd166;
-    --bs-green: #06d6a0;
-    --bs-teal: #050505;
-    --bs-cyan: #50a5f1;
-    --bs-white: #fff;
-    --bs-gray: #797c8c;
-    --bs-gray-dark: #343a40;
-    --bs-gray-100: #f8f9fa;
-    --bs-gray-200: #f9f9f9;
-    --bs-gray-300: #f6f6f9;
-    --bs-gray-400: #e6ebf5;
-    --bs-gray-500: #adb5bd;
-    --bs-gray-600: #797c8c;
-    --bs-gray-700: #495057;
-    --bs-gray-800: #343a40;
-    --bs-gray-900: #212529;
-    --bs-primary: #4eac6d;
-    --bs-secondary: #797c8c;
-    --bs-success: #06d6a0;
-    --bs-info: #50a5f1;
-    --bs-warning: #ffd166;
-    --bs-danger: #ef476f;
-    --bs-purple: #6153cc;
-    --bs-pink: #e83e8c;
-    --bs-indigo: #560bad;
-    --bs-dark: #343a40;
-    --bs-primary-rgb: 78,172,109;
-    --bs-secondary-rgb: 121,124,140;
-    --bs-success-rgb: 6,214,160;
-    --bs-info-rgb: 80,165,241;
-    --bs-warning-rgb: 255,209,102;
-    --bs-danger-rgb: 239,71,111;
-    --bs-purple-rgb: 97,83,204;
-    --bs-pink-rgb: 232,62,140;
-    --bs-indigo-rgb: 86,11,173;
-    --bs-dark-rgb: 52,58,64;
-    --bs-white-rgb: 255,255,255;
-    --bs-black-rgb: 0,0,0;
-    --bs-body-bg-rgb: 250,250,250;
+  --bs-red: #ef476f;
+  --bs-orange: #fc814a;
+  --bs-yellow: #ffd166;
+  --bs-green: #06d6a0;
+  --bs-teal: #050505;
+  --bs-cyan: #50a5f1;
+  --bs-white: #fff;
+  --bs-gray: #797c8c;
+  --bs-gray-dark: #343a40;
+  --bs-gray-100: #f8f9fa;
+  --bs-gray-200: #f9f9f9;
+  --bs-gray-300: #f6f6f9;
+  --bs-gray-400: #e6ebf5;
+  --bs-gray-500: #adb5bd;
+  --bs-gray-600: #797c8c;
+  --bs-gray-700: #495057;
+  --bs-gray-800: #343a40;
+  --bs-gray-900: #212529;
+  --bs-primary: #4eac6d;
+  --bs-secondary: #797c8c;
+  --bs-success: #06d6a0;
+  --bs-info: #50a5f1;
+  --bs-warning: #ffd166;
+  --bs-danger: #ef476f;
+  --bs-purple: #6153cc;
+  --bs-pink: #e83e8c;
+  --bs-indigo: #560bad;
+  --bs-dark: #343a40;
+  --bs-primary-rgb: 78, 172, 109;
+  --bs-secondary-rgb: 121, 124, 140;
+  --bs-success-rgb: 6, 214, 160;
+  --bs-info-rgb: 80, 165, 241;
+  --bs-warning-rgb: 255, 209, 102;
+  --bs-danger-rgb: 239, 71, 111;
+  --bs-purple-rgb: 97, 83, 204;
+  --bs-pink-rgb: 232, 62, 140;
+  --bs-indigo-rgb: 86, 11, 173;
+  --bs-dark-rgb: 52, 58, 64;
+  --bs-white-rgb: 255, 255, 255;
+  --bs-black-rgb: 0, 0, 0;
+  --bs-body-bg-rgb: 250, 250, 250;
 }
